--- a/config/app.yml
+++ b/config/app.yml
@@ -21,4 +21,8 @@ all:
           request_token_url: https://api.login.yahoo.com/oauth/v2/get_request_token
           authorize_url: https://api.login.yahoo.com/oauth/v2/request_auth
           access_token_url: https://api.login.yahoo.com/oauth/v2/get_token
+        facebook:
+          request_token_url: ~
+          authorize_url: http://www.facebook.com/dialog/oauth
+          access_token_url: https://graph.facebook.com/oauth/access_token
       
