--- a/config/app.yml
+++ b/config/app.yml
@@ -25,4 +25,8 @@ all:
           request_token_url: ~
           authorize_url: http://www.facebook.com/dialog/oauth
           access_token_url: https://graph.facebook.com/oauth/access_token
+        netflix:
+          request_token_url: http://api.netflix.com/oauth/request_token
+          authorize_url: http://api.netflix.com/oauth/login
+          access_token_url: http://api.netflix.com/oauth/access_token
 
