--- a/config/app.yml
+++ b/config/app.yml
@@ -1,28 +1,34 @@
 all:
-
   .settings:
     cacophony:
       plugin:
-        routes_register: true
+        routes_register:      true
       providers:
         vimeo:
-          request_token_url: http://vimeo.com/oauth/request_token
-          authorize_url: http://vimeo.com/oauth/authorize
-          access_token_url: http://vimeo.com/oauth/access_token
+          request_token_url:  http://vimeo.com/oauth/request_token
+          authorize_url:      http://vimeo.com/oauth/authorize
+          access_token_url:   http://vimeo.com/oauth/access_token
         twitter:
-          request_token_url: https://api.twitter.com/oauth/request_token
-          authorize_url: https://api.twitter.com/oauth/authenticate
-          access_token_url: https://api.twitter.com/oauth/access_token
+          request_token_url:  https://api.twitter.com/oauth/request_token
+          authorize_url:      https://api.twitter.com/oauth/authenticate
+          access_token_url:   https://api.twitter.com/oauth/access_token
         linkedin:
-          request_token_url: https://api.linkedin.com/uas/oauth/requestToken
-          authorize_url: https://www.linkedin.com/uas/oauth/authenticate
-          access_token_url: https://api.linkedin.com/uas/oauth/accessToken
+          request_token_url:  https://api.linkedin.com/uas/oauth/requestToken
+          authorize_url:      https://www.linkedin.com/uas/oauth/authenticate
+          access_token_url:   https://api.linkedin.com/uas/oauth/accessToken
         yahoo:
-          request_token_url: https://api.login.yahoo.com/oauth/v2/get_request_token
-          authorize_url: https://api.login.yahoo.com/oauth/v2/request_auth
-          access_token_url: https://api.login.yahoo.com/oauth/v2/get_token
+          request_token_url:  https://api.login.yahoo.com/oauth/v2/get_request_token
+          authorize_url:      https://api.login.yahoo.com/oauth/v2/request_auth
+          access_token_url:   https://api.login.yahoo.com/oauth/v2/get_token
         facebook:
-          request_token_url: ~
-          authorize_url: http://www.facebook.com/dialog/oauth
-          access_token_url: https://graph.facebook.com/oauth/access_token
-
+          request_token_url:  ~
+          authorize_url:      http://www.facebook.com/dialog/oauth
+          access_token_url:   https://graph.facebook.com/oauth/access_token
+        instagram:
+          api_url:            https://api.instagram.com/v1
+          request_token_url:  ~
+          authorize_url:      https://api.instagram.com/oauth/authorize/
+          access_token_url:   https://api.instagram.com/oauth/access_token
+          response_type:      code
+          access_token_params:
+            grant_type:       authorization_code
