Added mock for facebook
- Functional tests will come soon to this plugin :-)

--- a/config/app.yml
+++ b/config/app.yml
@@ -1,3 +1,13 @@
+test:
+  .settings:
+    cacophony:
+      providers:
+        facebook:
+          request_token_url:  ~
+          authorize_url:      /oauth/mock/facebook/dialog
+          access_token_url:   /oauth/mock/facebook/access_token
+
+
 all:
   .settings:
     cacophony:
