Upgraded to allow multiple tokens per user - i.e can  connect both Facebook and Twitter to a user account

--- a/config/app.yml
+++ b/config/app.yml
@@ -12,6 +12,7 @@ all:
   .settings:
     cacophony:
       plugin:
+        allow_multiple_tokens: false   # One account can have multiple ways of logging in (e.g. Twitter & Facebook tokens)
         routes_register:      true
       providers:
         vimeo:
